# hw1-hangman

./: README.md  pyproject.toml
src/: __init__.py  main.py
src/application/: __init__.py  config.py  game_service.py
src/core/: __init__.py  entities.py  exceptions.py  game.py  interfaces.py
src/infrastructure/: __init__.py  cli_ui.py  storage.py  visuals.py
tests/: test_game.py  test_game_service.py  test_interactive.py  test_main.py  test_non_interactive.py
