[tool.poetry]
name = "hw1-hangman"
version = "0.2.0"
description = "A Python console game with two modes, word categories, and an achievement system."
authors = ["Egor <ifbytopic@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-cov = "^7.0.0"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
ruff = "^0.14.11"
black = "^25.12.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^9.1.0"


[tool.poetry.group.lint.dependencies]
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"